[package]
name = "seed-d3"
version = "0.1.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

[profile.release]
lto = true
opt-level = 'z'
