[package]
name = "d3-examples"
version = "0.1.0"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.8"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 'z'
